# tourmetria

./: .env  .pre-commit-config.yaml  README.md  docker-compose.frontend.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  entrypoint.test.sh  pyproject.toml  pytest.ini  setup.cfg
backend/accomodations/: apps.py
backend/accomodations/admin/: __init__.py  accomodation_admin.py
backend/accomodations/migrations/: 0001_initial.py  0002_accomodation_name_site_alter_accomodation_name_and_more.py
backend/accomodations/models/: __init__.py  accomodation.py
backend/airports/: apps.py
backend/airports/admin/: __init__.py  airport_admin.py
backend/airports/migrations/: 0001_initial.py
backend/airports/models/: airport.py
backend/airports/serializers/: __init__.py  airport_serializer.py
backend/airports/viewsets/: __init__.py  airport_viewset.py
backend/bg/: apps.py  tasks.py
backend/bg/converters/: __init__.py  accomodation_converter.py  city_converter.py  country_converter.py  hotel_converter.py
backend/bg/loaders/: __init__.py  accomodation_loader.py  base_loader.py  city_loader.py  country_loader.py  hotel_loader.py
backend/bg/services/: __init__.py  bg_client.py
backend/cities/: apps.py
backend/cities/admin/: city_admin.py
backend/cities/migrations/: 0001_initial.py  0002_alter_city_options.py
backend/cities/models/: city.py
backend/common/: admin.py  apps.py  auth.py  decorators.py  fields.py  filters.py  form_fields.py  models.py  paginations.py  rest_fields.py  storages.py  tasks.py  utils.py  viewset_mixins.py  viewsets.py  widgets.py
backend/common/drf_tracking/: admin.py  apps.py  mixins.py  models.py
backend/common/integrations/: __init__.py  smsr.py
backend/config/: asgi.py  celery.py  routers.py  settings.py  urls.py  wsgi.py
backend/countries/: apps.py  constants.py
backend/countries/admin/: __init__.py  city_admin.py  country_admin.py  depart_city_admin.py  resort_admin.py
backend/hotels/: apps.py  newfile.xlsx  signals.py  tasks.py
backend/rooms/: apps.py
backend/sletatru/: apps.py  tasks.py  utils.py
backend/tg/: apps.py
backend/users/: constants.py  forms.py
(+650 files in other folders)
